# Autonomous-Robot-Navigation

./: README.md
Code/: readme.md
Code/Building/: model.sdf
Code/Limo SRC/: OwnInit.pgm
Code/Limo SRC/src/: model.config  model.sdf
Code/Limo SRC/src/limo_car/: CMakeLists.txt  package.xml  readme.md
Code/Limo SRC/src/limo_car/config/: nav2_params.yaml  slam_toolbox.yaml
Code/Limo SRC/src/limo_car/launch/: limo_car_nav2.launch copy.py  limo_car_sim.launch.py  limo_car_slam.launch.py
Code/Limo SRC/src/limo_car/maps/: NewLabMap.pgm  NewLabMap.yaml  OwnInit.yaml  week5_map.pgm  week5_map.yaml
Code/Limo SRC/src/limo_car/models/moving_box/: moving_box.config  moving_box.sdf
Code/Limo SRC/src/limo_car/scripts/: robot_description_publisher.py
Code/Limo SRC/src/limo_car/urdf/: limo_car.urdf.xacro
Code/Limo SRC/src/limo_car/worlds/: empty.world  model.config  model.sdf
Evidence/: Navigation.md  Path_Planning.md
Evidence/Navigation/: DWA.ipynb  readme.md
Video/: Evidence.md  PathPlanning.md  Recovery.md  SLAM.md  readme.md
Video/Navigation/: Alternativepaths.md  DynamicObsticles.md  readme.md
Video/Navigation/AStar/: AStarVisulisation.ipynb  Nav2peramiters.yaml
Video/Navigation/DWA/: readme..md
