<?xml version="1.0"?>
<package format="3">
  <name>limo_car</name>
  <version>0.0.1</version>
  <description>From-scratch Gazebo simulation package for a simple LIMO-like differential drive robot.</description>

  <maintainer email="you@university.ac.uk">teaching-team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
